bug fix listing stats, listing user stats, ita spelling, city list